--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.1.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
+    "sleep": "^3.0.1",
     "socket.io": "~1.4.8"
   }
 }
